@@ -1,20 +1,0 @@
-#!/bin/sh
-
-if [ ! -x /usr/bin/python ]
-then
-    exit 0
-fi
-
-cd /var/lib/mailman/cron 2> /dev/null
-
-# Mail reminders to admins as to pending requests.
-if [ -e /var/lib/mailman/cron/checkdbs ]
-then
-    su -s /bin/sh list -c "/usr/bin/python /var/lib/mailman/cron/checkdbs"
-fi
-
-# Mail digests for lists that do periodic as well as threshhold delivery.
-if [ -e /var/lib/mailman/cron/senddigests ]
-then
-    su -s /bin/sh list -c "/usr/bin/python /var/lib/mailman/cron/senddigests"
-fi
