@@ -1,14 +1,0 @@
-#!/bin/sh
-
-if [ ! -x /usr/bin/python ]
-then
-    exit 0
-fi
-
-cd /var/lib/mailman/cron 2> /dev/null
-
-# Send password reminders for all lists to all users.
-if [ -e /var/lib/mailman/cron/mailpasswds ]
-then
-    su -s /bin/sh list -c "/usr/bin/python /var/lib/mailman/cron/mailpasswds"
-fi
